class_name CollectingTestLevel
extends BaseLevel

func getCollectablePositions() -> Array:
	return [
		"mineral@RegularFloorPlate",		
		"palmtree@RegularFloorPlate8",
		"simplebox@RegularFloorPlate2",
		"mineral@RegularFloorPlate96",
		"tank@RegularFloorPlate94",
		"palmtree@RegularFloorPlate105",
		"mineral@RegularFloorPlate103"
	]
